# CombineUI

./: .swiftlint-rules.yml  .swiftlint.yml  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  Makefile  Package.resolved  Package.swift  Package@swift-5.10.swift  README.md
.github/workflows/: artifactory.yml  bazel.yml  swift.yml
Example/: README.md  project.yml
Example/BuildSettings/: Debug.xcconfig  Shared.xcconfig
Example/Example/BuildSettings/: Shared.xcconfig
Example/Example/Sources/: AppDelegate.swift  MenuViewController.swift  SceneDelegate.swift
Example/Example/Sources/Examples/: ButtonExample.swift  ControlExample.swift  DatePickerExample.swift  GestureRecognizerExample.swift  PageControlExample.swift  ProgressViewExample.swift  RefreshControlExample.swift  ScrollViewExample.swift  SearchBarExample.swift  SegmentedControlExample.swift  SliderExample.swift  StepperExample.swift  SwitchExample.swift  TextFieldExample.swift  TextViewExample.swift  ViewControllerExample.swift
Example/ExampleTests/BuildSettings/: Shared.xcconfig
Example/ExampleTests/Tests/: ExampleTests.swift
Sources/CombineUI/: Bindable.swift  Binding.swift  Target.swift  View.swift
Sources/CombineUI/Support/: Publisher.swift
Sources/CombineUI/UIKit/: UIKit+Target.swift  UIScheduler.swift  UIView.swift
Tests/CombineUITests/: BindingTests.swift  CombineUITests.swift
Tests/CombineUITests/UIKit/: ControlTests.swift  GestureRecognizerTests.swift  ViewControllerTests.swift
Tests/CombineUITests/UIKitTests/: ControlTests.swift  GestureRecognizerTests.swift  ViewControllerTests.swift
(+115 files in other folders)
